Agrego arcivo nro 3 de test automatizado con puppeteer, mocha y chai

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests/example.test.js",
-    "test2": "mocha ./tests/2.test.js"
+    "test2": "mocha ./tests/2.test.js",
+    "test3": "mocha ./tests/3.test.js"
   },
   "repository": {
     "type": "git",
